2010-01-21  Dmitry Titov  <dimich@chromium.org>

        Not reviewed, Chromium build fix. Add AccessibilityScrollbar.h and .cpp to WebCore.gypi

        * WebCore.gypi:

2010-01-21  Albert J. Wong  <ajwong@chromium.org>

        [chromium] Unreviewed build fix.

        Fix possible use of initialized variable warning in release mode.

        * bindings/v8/SerializedScriptValue.cpp:
        (WebCore::ZigZag::Deserializer::doDeserialize):

2010-01-21  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed buildfix after r53644.

        * WebCore.pro: accessibility/AccessibilityScrollbar.cpp and accessibility/AccessibilityScrollbar.h added.

2010-01-21  Dave Hyatt  <hyatt@apple.com>

        Reviewed by Oliver Hunt.

        Make sure to do a JSLock before deserialization of script values, since they can heap allocate.

        * bindings/js/SerializedScriptValue.cpp:
        (WebCore::SerializedScriptValueData::deserialize):

2010-01-21  Beth Dakin  <bdakin@apple.com>

        Reviewed by Oliver Hunt.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=33923 REGRESSION 
        (Safari 4): AXValueChanged no longer sent for text area scrollbars
        -and corresponding-
        <rdar://problem/6942686>

        New class AccessibilityScrollbar inherits directly from 
        AccessibilityObject.
        * accessibility/AccessibilityScrollbar.cpp: Added.
        (WebCore::AccessibilityScrollbar::AccessibilityScrollbar):
        (WebCore::AccessibilityScrollbar::create):
        (WebCore::AccessibilityScrollbar::valueForRange):
        * accessibility/AccessibilityScrollbar.h: Added.
        (WebCore::AccessibilityScrollbar::setScrollbar):
        (WebCore::AccessibilityScrollbar::roleValue):
        (WebCore::AccessibilityScrollbar::accessibilityIsIgnored):
        (WebCore::AccessibilityScrollbar::size):
        (WebCore::AccessibilityScrollbar::elementRect):
        (WebCore::AccessibilityScrollbar::parentObject):
